// Copyright 2025 The Ray Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ray.rpc.events;

import "src/ray/protobuf/common.proto";

message BundleSpec {
  int32 bundle_index = 1;
  map<string, double> unit_resources = 2;
  map<string, string> label_selector = 3;
}

message PlacementGroupDefinitionEvent {
  bytes placement_group_id = 1;
  string name = 2;
  string ray_namespace = 3;
  ray.rpc.PlacementStrategy strategy = 4;
  bool is_detached = 5;
  bytes creator_job_id = 6;
  bytes creator_actor_id = 7;
  repeated BundleSpec bundles = 8;
  bytes soft_target_node_id = 9;
  int64 creation_request_received_ns = 10;
}
